# yew-tailwind

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  README.md  rustfmt.toml
examples/: README.md
examples/demo/: Cargo.toml  README.md  Trunk.toml  index.html  tailwind.css
examples/demo/src/: main.rs
lib/: Cargo.toml  Makefile.toml
lib/src/: lib.rs
lib/src/components/: container.rs
lib/src/primitives/: base.rs  box.rs  flex.rs  image.rs  mod.rs  pbox.rs  text.rs  touchable.rs
lib/src/tailwind/: border.rs  mod.rs  properties.rs
